test/Incremental/fail/Inputs/One.swift
open class Base {}

public protocol BaseProtocol {}
